cmake_minimum_required(VERSION 3.5)
SET(VERSION_SHORT 0.1)
SET(QWT_APP_NAME nanperf)
project(${QWT_APP_NAME} VERSION ${VERSION_SHORT})
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} 5.8 COMPONENTS Core Gui Widgets REQUIRED)
file(GLOB APP_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB APP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
add_executable(${QWT_APP_NAME}
    ${APP_HEADER_FILES}
    ${APP_SOURCE_FILES}
)

if(NOT TARGET qwt::plot)
    # Standalone build: load qwt via find_package
    message(STATUS "NOT TARGET qwt::plot find_package(qwt REQUIRED)")
    find_package(qwt REQUIRED)
endif()

target_link_libraries(${QWT_APP_NAME} PUBLIC qwt::plot)

set_target_properties(${QWT_APP_NAME} PROPERTIES
    AUTOMOC ON  AUTORCC ON  AUTOUIC ON
    WIN32_EXECUTABLE TRUE
    CXX_EXTENSIONS OFF
    DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
    EXPORT_NAME ${QWT_APP_NAME}
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
install(TARGETS ${QWT_APP_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION lib)

# Optional unit tests for pure logic (NanDataGenerator, BenchmarkRunner::analyze)
if(QWT_CONFIG_BUILD_TESTS)
    find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Test REQUIRED)
    add_executable(nanperf_test
        tests/tst_NanDataGenerator.cpp
        NanDataGenerator.cpp
    )
    target_link_libraries(nanperf_test PRIVATE qwt::plot Qt${QT_VERSION_MAJOR}::Test)
    set_target_properties(nanperf_test PROPERTIES
        AUTOMOC ON
        CXX_EXTENSIONS OFF
        WIN32_EXECUTABLE FALSE
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    )
    # Match the repo's test pattern so ctest can discover the test and the
    # console binary emits its Qt Test output (WIN32_EXECUTABLE FALSE).
    enable_testing()
    add_test(NAME nanperf_test COMMAND nanperf_test)
endif()
